Fixed issue with images on safari

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ a:hover {
   justify-content: center;
   align-items: center;
   position: fixed;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   height: 100vh;
   width: 100vw;
   top: 0;
@@ -154,6 +154,7 @@ main {
   display: flex;
   flex-direction: column;
   width: 100%;
+  margin-top: 2rem;
 }
 
 .work img {
@@ -246,6 +247,7 @@ About Page
     width: 300px;
     height: 300px;
     margin: 0;
+    margin-top: 2.4rem;
     padding: 2rem;
   }
 
@@ -259,10 +261,10 @@ About Page
 
   .border-container {
     position: absolute;
-    top: 140px;
-    left: 100px;
-    width: 50%;
-    height: 50%;
+    top: 150px;
+    left: 80px;
+    width: 60%;
+    height: 60%;
     border: 2px solid black;
   }
 }
@@ -278,19 +280,21 @@ About Page
 
   .work {
     flex-direction: row;
-    overflow-x: scroll;
+    overflow-x: auto;
     margin: 2rem auto;
     padding: 1rem;
-    width: 90%;
+    width: 85%;
   }
 
   .work img {
     width: 70%;
+    height: 60vh;
+    object-fit: cover;
     margin: 0;
   }
 
   .work img:not(:first-child) {
-    margin: 0 4rem;
+    margin-left: 4rem;
   }
 
   .work img:not(:last-child) {
